refatorando exemplos